--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
           <h1>@ON THE GO petting zoo</h1> </div>
         <div style="margin-top: 10%;" class="col-6"><img
           class="img-fluid"
-          src="./Images/goat-mascot.png"
+          src="./goat-mascot.png"
           alt=""
         /></div>
       </div>
