--- a/admission.html
+++ b/admission.html
@@ -248,17 +248,6 @@
             </thead>
             <tbody>
               <tr>
-                <td style=" background-color: #f5f5f5;  font-size: 1.2em;
-                " class="pb-0">Adult</td>
-                <td style=" background-color: #f5f5f5;  font-size: 1.2em;
-                                " scope="row" rowspan="2" class="align-middle">$40.00</td>
-              </tr>
-              <tr style="border-bottom: 1px solid #b10dc9;">
-                <td style=" background-color: #f5f5f5; 
-                " scope="row" class="pt-0">(13 yrs old & above)</td>
-              </tr>
-
-              <tr>
                 <td style=" background-color: #f5f5f5; font-size: 1.2em;
                 " class="pb-0">Child</td>
                 <td style=" background-color: #f5f5f5; font-size: 1.2em;
@@ -268,15 +257,26 @@
                 <td style=" background-color: #f5f5f5; 
                 " scope="row" class="pt-0">(3 &#45; 12 yrs old)</td>
               </tr>
+              <tr>
+                <td style=" background-color: #f5f5f5;  font-size: 1.2em;
+                " class="pb-0">Adult</td>
+                <td style=" background-color: #f5f5f5;  font-size: 1.2em;
+                                " scope="row" rowspan="2" class="align-middle">$40.00</td>
+              </tr>
+              <tr style="border-bottom: 1px solid #b10dc9;">
+                <td style=" background-color: #f5f5f5; 
+                " scope="row" class="pt-0">(13 yrs old & above)</td>
+              </tr>
             </tbody>
           </table>
         </div>
       </div>
 
       <p class="text-start">* Children under 4 yrs old go in for free</p>
-      <button style="background-color: red; border-top-left-radius: 10px;
+      <!--<button style="background-color: red; border-top-left-radius: 10px;
       border-bottom-left-radius: 10px; border-radius: 10px; padding: 15px" class="btn mb-5"><a
-          style="text-decoration: none; color: #f5f5f5;" href="">Buy Ticket</a></button>
+          style="text-decoration: none; color: #f5f5f5;" href="">Buy Ticket</a></button>-->
+      
     </div>
   </div>
 
