--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     overflow-x: hidden;
   }
 
+  p {
+    font-size: 1.2em;
+  }
+
   .top {
     background-image: url('https://img.freepik.com/premium-vector/green-valley_7081-956.jpg?w=1800');
   }
@@ -184,7 +188,7 @@
 
 
   <div class="container text-center">
-    <h1>Ratings of our petting zoo</h1>
+    <h1 class="mb-5">Ratings of our petting zoo</h1>
     <div class="d-md-flex d-grid">
       <div class="created-wrapper mx-5 p-2">
         <div class="container created-rating">
@@ -235,7 +239,7 @@
             <span class="number">5</span>
           </div>
         </div>
-        <div class="message">Amazing time here!</div>
+        <div class="message">So many cute animals for my kids to play with. Will come again!</div>
       </div>
       <div class="created-wrapper mx-5 p-2">
         <div class="container created-rating">
@@ -260,7 +264,7 @@
             <span class="number">5</span>
           </div>
         </div>
-        <div class="message">Had a few troubles along the way but the staff were amazing and so sos helpful. Highly
+        <div class="message">Had a few troubles along the way but the staff were amazing and so so helpful. Highly
           recommend!</div>
       </div>
     </div>
@@ -274,23 +278,23 @@
         <div class="modal-content wrapper">
           <p id="message">Rate Your Experience</p>
           <div class="user-container">
-            <div id="first-star" class="star-container inactive">
+            <div style="border: 0;"  id="first-star" class="star-container inactive">
               <i class="fa-regular fa-star"></i>
               <span class="number">1</span>
             </div>
-            <div class="star-container inactive">
+            <div style="border: 0;" class="star-container inactive">
               <i class="fa-regular fa-star"></i>
               <span class="number">2</span>
             </div>
-            <div class="star-container inactive">
+            <div style="border: 0;" class="star-container inactive">
               <i class="fa-regular fa-star"></i>
               <span class="number">3</span>
             </div>
-            <div class="star-container inactive">
+            <div style="border: 0;" class="star-container inactive">
               <i class="fa-regular fa-star"></i>
               <span class="number">4</span>
             </div>
-            <div class="star-container inactive">
+            <div style="border: 0;" class="star-container inactive">
               <i class="fa-regular fa-star"></i>
               <span class="number">5</span>
             </div>
