--- a/meet.html
+++ b/meet.html
@@ -69,7 +69,7 @@
               <a class="nav-link" href="admission.html">Hours & Admissions</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="about.html">About</a>
             </li>
           </ul>
         </div>
@@ -93,7 +93,8 @@
     </nav>
     <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%"
       data-bs-smooth-scroll="true" class="scrollspy-example bg-body-tertiary p-3 rounded-2" tabindex="0">
-      <div class="container">
+      <!--TEENSY TOWN-->
+      <div class="container mb-5">
         <h1 style="color: rgb(171, 136, 91)" id="scrollspyHeading1">
           Welcome to Teensy Town!
         </h1>
@@ -314,8 +315,9 @@
         </div>
       </div>
 
-      <div class="container">
-        <h1 style="color: rgba(100, 255, 165, 0.524)" id="scrollspyHeading2">
+      <!--MEDOWS-->
+      <div class="container mb-5">
+        <h1 style="color: rgba(0, 255, 106, 0.524)" id="scrollspyHeading2">
           Welcome to Medows!
         </h1>
         <hr />
@@ -445,7 +447,8 @@
         </div>
       </div>
 
-      <div class="container">
+      <!--HAY STACKS-->
+      <div class="container mb-5">
         <h1 style="color: rgb(75, 75, 75, 0.524)" id="scrollspyHeading3">
           Welcome to Hay Stacks!
         </h1>
@@ -522,7 +525,7 @@
                         <img src="https://www.zoobasel.ch/uploads/images/news/fotos/shetlandpony_cacahuete_Z6B5123.jpg"
                           alt="" />
                         <div class="modal-body">
-                          Thunderstrikeis known for his insatiable curiosity. From a young age, he displayed an
+                          Thunderstrike is known for his insatiable curiosity. From a young age, he displayed an
                           eagerness to explore and discover the world around him. Whenever there's a new object, sound,
                           or scent, Thunderstrike can't help but investigate with wide eyes and a twitching nose. This
                           curiosity often leads him on adventures beyond the confines of their pasture, with their
@@ -535,7 +538,6 @@
               </div>
             </div>
           </div>
-          <div class="btn d-block d-md-none" onclick="show()">View All</div>
         </div>
       </div>
     </div>
